@@ -1,0 +1,20 @@
+..........
+Writing a massive amount of crap
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 603 bytes
+Read: 592 bytes
+Read in 10240 bytes
